# pj_python_uv_starter

./: .github_instructions.md  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: health.py  items.py
tests/: test_items.py  test_main.py
